--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -103,7 +103,11 @@ h2 {
 .section-common__title {
   text-align: center;
 }
-
+.section-common__tit {
+  color: #000;
+  text-align: center;
+  margin-bottom: 50px;
+}
 .section-common__title h2 {
   font-size: 2.7em;
   margin-bottom: 30px;
@@ -177,7 +181,7 @@ footer {
   color: black;
 }
 #section-services {
-  background: url(./images/fff.jpg);
+  background-color: white;
   background-repeat: no-repeat;
   background-position: center top;
   background-size: cover;
@@ -191,9 +195,10 @@ footer {
   background-position: center top;
   background-size: cover;
   background-attachment: fixed;
-  color: #eee;
+  color: black;
   margin: 1%;
 }
+
 #section-gallery {
   background: url(./images/mmmmm.jpg);
   background-repeat: no-repeat;
@@ -297,7 +302,7 @@ section {
   height: 50px;
   background: white;
   bottom: 40px;
-  right: 50px;
+  right: 22px;
   text-decoration: none;
   text-align: center;
   line-height: 50px;
@@ -427,6 +432,7 @@ ul li i:after {
   transition: 0.3s;
   -webkit-animation: hoverWave linear 1s infinite;
   animation: hoverWave linear 1s infinite;
+  border-radius: 50%;
 }
 
 .callback-bt .text-call {
