--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -120,5 +120,6 @@
     <script>
       new WOW().init();
     </script>
+    <script src="{{ url_for('static', filename='js/navbar-collapse.js') }}"></script>
   </body>
 </html>
