--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -8,7 +8,7 @@
         <h2 class="featurette-heading text-center">О нас</h2>
 
         <div class="container">
-          <h3>Миссcccccccия</h3>
+          <h3>Миссия</h3>
           Миссия салона - предоставить клиентам высокий сервис обслуживания и широкий спектр услуг по самым
           демократичным ценам.</p>
         </div>
