--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -158,7 +158,7 @@ footer {
   background-color: #eee;
 }
 .btn {
-  background-color: green;
+  background-color: gold;
   font-family: "Pacifico", cursive;
 }
 .btn:hover {
