--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -121,5 +121,6 @@
       new WOW().init();
     </script>
     <script src="{{ url_for('static', filename='js/navbar-collapse.js') }}"></script>
+    <script></script>
   </body>
 </html>
