--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -40,6 +40,7 @@
     />
     <link
       rel="stylesheet"
+      ver="1.03"
       href="{{ url_for('static', filename='css/styles.css') }}"
     />
   </head>
