--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -665,11 +665,7 @@ ul li i:after {
 }
 @media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-device-pixel-ratio: 3) {
   #header_content {
-    background-image: url(./images/onas.jpg);
-    background-repeat: no-repeat;
-    background-position: center top;
-    background-size: cover;
-    background-attachment: fixed;
+    color: black;
   }
 }
 /*end @media*/
