--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -220,12 +220,12 @@
     </divc>
 </section>
 
-<div type="button round" class="callback-bt " data-toggle="modal" data-target="#exampleModal">
+<!--<div type="button round" class="callback-bt " data-toggle="modal" data-target="#exampleModal">
   <div class="text-call ">
     <i class="fa fa-phone"></i>
     <span>Обратный<br>звонок</span>
   </div>
-</div>
+</div>-->
 
 </section>
 <section id="section-contacts" class="section-common">
