--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -365,13 +365,20 @@ footer {
 
 /* section about*/
 #section-about {
-  background: url(./images/fff.jpg);
+  /*background: url(./images/fff.jpg);
   background-repeat: no-repeat;
   background-position: center top;
   background-size: cover;
-  background-attachment: fixed;
+  background-attachment: fixed;*/
   color: #eee;
   margin: 1%;
+  background: url(./images/fff.jpg);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center top;
+  -o-background-size: cover;
+  -moz-background-size: cover;
+  -webkit-background-size: cover;
 }
 .onas {
   margin-top: 70px;
