--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -372,13 +372,8 @@ footer {
   background-attachment: fixed;*/
   color: #eee;
   margin: 1%;
-  background: url(./images/fff.jpg);
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: center top;
-  -o-background-size: cover;
-  -moz-background-size: cover;
-  -webkit-background-size: cover;
+  background: url(./images/fff.jpg) 50% -0.6rem no-repeat;
+  background-size: 100% 100%;
 }
 .onas {
   margin-top: 70px;
