--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -374,6 +374,8 @@ footer {
   margin: 1%;
   background: url(./images/fff.jpg) 50% -0.6rem no-repeat;
   background-size: 100% 100%;
+  background-position: center top;
+  background-attachment: fixed;
 }
 .onas {
   margin-top: 70px;
