--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -373,7 +373,7 @@ footer {
   color: #eee;
   margin: 1%;
   background: url(./images/fff.jpg) 50% -0.6rem no-repeat;
-  background-size: auto 100%;
+  background-size: 80% 100%;
   background-position: center top;
   background-attachment: fixed;
 }
