--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -374,7 +374,7 @@ footer {
   margin: 1%;
   background: url(./images/fff.jpg) 50% -0.6rem no-repeat;
   background-size: 100% 100%;
-  background-position: center;
+  background-position: center top;
   background-attachment: fixed;
 }
 .onas {
