--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -375,7 +375,7 @@ footer {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  background-image: url(./images/zz.jpg);
+  background-image: url(./images/fff.jpg);
 }
 .onas {
   margin-top: 70px;
