--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -7,7 +7,7 @@
 
         <div class="container">
           <h3>Миссия</h3>
-          Миссия салона - предоставить клиентам высокий сервис обслуживания и широкий спектр услуг по самым
+         <p> Миссия салона - предоставить клиентам высокий сервис обслуживания и широкий спектр услуг по самым
           демократичным ценам.</p>
         </div>
         <div class="container offset-md-1">
