--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -7,24 +7,24 @@
 
         <div class="container">
           <h3>Миссия</h3>
-         <p> Миссия салона - предоставить клиентам высокий сервис обслуживания и широкий спектр услуг по самым
+         <p class="font"> Миссия салона - предоставить клиентам высокий сервис обслуживания и широкий спектр услуг по самым
           демократичным ценам.</p>
         </div>
         <div class="container offset-md-1">
           <h3 class="text-center">Политика</h3>
-          <p> Мы всегда готовы предложить своим любимым клиентам индивидуальный подход . </p>
+          <p class="font"> Мы всегда готовы предложить своим любимым клиентам индивидуальный подход . </p>
         </div>
 
         <div class="container">
           <h3> Этикет</h3>
-          <p> Мы всегда рады приветствовать клиентов в нашей студии красоты. Мы с благодарностью относимся к выбору и
+          <p class="font"> Мы всегда рады приветствовать клиентов в нашей студии красоты. Мы с благодарностью относимся к выбору и
             мнению клиентов о работе студии, Гордимся доверием наших клиентов!</p>
         </div>
         <div class="container offset-md-1">
           <h3 class="text-center">Философия</h3>
-          <p> Видение и внутреннее правило нашей компании заключается в том что «Возможно - Все!»</p>
+          <p class="font" > Видение и внутреннее правило нашей компании заключается в том что «Возможно - Все!»</p class="font" >
         </div>
-        <p class="text-center">Добро пожаловать...</p>
+        <p class="font text-center">Добро пожаловать...</p>
 
       </div>
       <div class="col-md-6 wow zoomIn" data-wow-delay="0.1s">
@@ -110,7 +110,7 @@
               <input type="checkbox" checked>
               <i></i>
               <h2>Маникюр</h2>
-              <p class="text-center wow ">
+              <p class="font text-center  ">
                 Ремонт ногтя <br>
                 50р<br>
                 Дизайн(геометрия,вензеля,рисунок) <br>
@@ -132,7 +132,7 @@
               <input type="checkbox" checked>
               <i></i>
               <h2>Парикмахерские услуги</h2>
-              <p class="text-center">Выпрямление и питание волос (Кератин) <br>
+              <p class="font text-center">Выпрямление и питание волос (Кератин) <br>
                 2200р.<br>
                 Стрижка модельная <br>
                 300р<br>
@@ -156,7 +156,7 @@
               <input type="checkbox" checked>
               <i></i>
               <h2>Эстетическая косметология</h2>
-              <p class="text-center">
+              <p class="font text-center">
                 Чистка лица<br>
                 1300р.<br>
                 Мультивитаминный уход <br>
@@ -171,7 +171,7 @@
               <input type="checkbox" checked>
               <i></i>
               <h2>Макияж</h2>
-              <p class="text-center">
+              <p class="font text-center">
                 Макияж дневной <br>
                 1300р.<br>
                 Макияж вечерний <br>
@@ -186,7 +186,7 @@
               <input type="checkbox" checked>
               <i></i>
               <h2>Депиляция</h2>
-              <p class="text-center">
+              <p class=" font text-center">
                 Подмышечные впадины <br>
                 300р.<br>
                 Класическое бикини <br>
