--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -655,7 +655,7 @@ ul li i:after {
     width: 100vw;
   }
 }
-@media (max-width: 560px) {
+@media (min-width: 560px) {
   .font {
     font-size: 17px;
   }
