--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -6,22 +6,22 @@
         <h2 class="featurette-heading text-center">О нас</h2>
 
         <div class="container">
-          <h3>Миссия</h3>
+          <h3 class="font">Миссия</h3>
          <p class="font"> Миссия салона - предоставить клиентам высокий сервис обслуживания и широкий спектр услуг по самым
           демократичным ценам.</p>
         </div>
         <div class="container offset-md-1">
-          <h3 class="text-center">Политика</h3>
+          <h3 class="font text-center">Политика</h3>
           <p class="font"> Мы всегда готовы предложить своим любимым клиентам индивидуальный подход . </p>
         </div>
 
         <div class="container">
-          <h3> Этикет</h3>
+          <h3 class="font"> Этикет</h3>
           <p class="font"> Мы всегда рады приветствовать клиентов в нашей студии красоты. Мы с благодарностью относимся к выбору и
             мнению клиентов о работе студии, Гордимся доверием наших клиентов!</p>
         </div>
         <div class="container offset-md-1">
-          <h3 class="text-center">Философия</h3>
+          <h3 class="font text-center">Философия</h3>
           <p class="font" > Видение и внутреннее правило нашей компании заключается в том что «Возможно - Все!»</p class="font" >
         </div>
         <p class="font text-center">Добро пожаловать...</p>
@@ -109,7 +109,7 @@
             <li>
               <input type="checkbox" checked>
               <i></i>
-              <h2>Маникюр</h2>
+              <h2 class="font">Маникюр</h2>
               <p class="font text-center  ">
                 Ремонт ногтя <br>
                 50р<br>
@@ -131,7 +131,7 @@
             <li>
               <input type="checkbox" checked>
               <i></i>
-              <h2>Парикмахерские услуги</h2>
+              <h2 class="font">Парикмахерские услуги</h2>
               <p class="font text-center">Выпрямление и питание волос (Кератин) <br>
                 2200р.<br>
                 Стрижка модельная <br>
@@ -155,7 +155,7 @@
             <li>
               <input type="checkbox" checked>
               <i></i>
-              <h2>Эстетическая косметология</h2>
+              <h2 class="font">Эстетическая косметология</h2>
               <p class="font text-center">
                 Чистка лица<br>
                 1300р.<br>
@@ -170,7 +170,7 @@
             <li>
               <input type="checkbox" checked>
               <i></i>
-              <h2>Макияж</h2>
+              <h2 class="font">Макияж</h2>
               <p class="font text-center">
                 Макияж дневной <br>
                 1300р.<br>
@@ -185,7 +185,7 @@
             <li>
               <input type="checkbox" checked>
               <i></i>
-              <h2>Депиляция</h2>
+              <h2 class="font">Депиляция</h2>
               <p class=" font text-center">
                 Подмышечные впадины <br>
                 300р.<br>
