--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -6,22 +6,22 @@
         <h2 class="featurette-heading text-center">О нас</h2>
 
         <div class="container">
-          <h3 class="font">Миссия</h3>
+          <h3 class="pont">Миссия</h3>
          <p class="font"> Миссия салона - предоставить клиентам высокий сервис обслуживания и широкий спектр услуг по самым
           демократичным ценам.</p>
         </div>
         <div class="container offset-md-1">
-          <h3 class="font text-center">Политика</h3>
+          <h3 class="pont text-center">Политика</h3>
           <p class="font"> Мы всегда готовы предложить своим любимым клиентам индивидуальный подход . </p>
         </div>
 
         <div class="container">
-          <h3 class="font"> Этикет</h3>
+          <h3 class="pont"> Этикет</h3>
           <p class="font"> Мы всегда рады приветствовать клиентов в нашей студии красоты. Мы с благодарностью относимся к выбору и
             мнению клиентов о работе студии, Гордимся доверием наших клиентов!</p>
         </div>
         <div class="container offset-md-1">
-          <h3 class="font text-center">Философия</h3>
+          <h3 class="pont text-center">Философия</h3>
           <p class="font" > Видение и внутреннее правило нашей компании заключается в том что «Возможно - Все!»</p class="font" >
         </div>
         <p class="font text-center">Добро пожаловать...</p>
