--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -665,6 +665,8 @@ ul li i:after {
   .pont {
     font-size: 32px;
     font-weight: 900;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: white;
   }
 }
 @media (max-width: 560px) {
