--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -29,7 +29,7 @@
       </div>
       <div class="col-md-6 wow zoomIn" data-wow-delay="0.1s">
         <div class="img  ">
-          <img class="img-fluid onas" width="500" height="400"
+          <img class="imgn img-fluid onas" width="500" height="400"
             src="{{ url_for('static', filename='css/images/bbb.jpg') }}" alt="">
         </div>
         <title>Placeholder</title>
@@ -49,7 +49,7 @@
       {% for service in services %}
       {% if service.show %}
       <div class="col-md-4 ">
-        <div class="card  mb-4 shadow-sm text-center wow zoomIn" data-wow-delay="0.1s">
+        <div class="card  mb-4 shadow-sm text-center " >
           {% if service.image %}
           <img class="img-thumbnail gap  " src="{{ url_for('static', filename=service.image) }}" alt="">
           {% else %}
@@ -209,7 +209,7 @@
       </div>
       <div class="col-md-6 ">
         <div class="img   ">
-          <img class="img-fluid yslugi" width="500" height="400"
+          <img class="imgn img-fluid yslugi" width="500" height="400"
             src="{{ url_for('static', filename='css/images/pr.jpg') }}" alt="">
         </div>
         <title>Placeholder</title>
