--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -665,8 +665,8 @@ ul li i:after {
   .pont {
     font-size: 32px;
     font-weight: 900;
-    -webkit-text-stroke: 2px white;
-    text-align: center;
+    -webkit-text-stroke-width: 0.6px;
+    -webkit-text-stroke-color: black;
   }
 }
 @media (max-width: 560px) {
