--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -667,6 +667,7 @@ ul li i:after {
     font-weight: 900;
     -webkit-text-stroke-width: 0.6px;
     -webkit-text-stroke-color: black;
+    text-align: center;
   }
 }
 @media (max-width: 560px) {
