--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -46,6 +46,7 @@
   </div>
   <div class="section-common__content container ">
     <div class="row ">
+      <div class="container text-center">
       {% for service in services %}
       {% if service.show %}
       <div class="col-md-4 ">
@@ -63,6 +64,7 @@
       </div>
       {% endif %}
       {% endfor %}
+    </div>
     </div>
   </div>
 </section>
