--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -46,7 +46,7 @@
   </div>
   <div class="section-common__content container ">
     <div class="row ">
-      <div class="container text-center">
+      <div class="container-yslugi text-center">
       {% for service in services %}
       {% if service.show %}
       <div class="col-md-4 ">
