--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -45,8 +45,8 @@
     <h2 class="ivi">Услуги</h2>
   </div>
   <div class="section-common__content container ">
-    <div class="row  ">
-      <div class="container-yslugi text-center">
+    <div class="row container-yslugi ">
+      
       {% for service in services %}
       {% if service.show %}
       <div class="col-md-4 ">
@@ -64,7 +64,7 @@
       </div>
       {% endif %}
       {% endfor %}
-    </div>
+    
     </div>
   </div>
 </section>
