--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -552,8 +552,9 @@ ul li i:after {
 }
 .container-yslugi {
   display: grid;
-  grid-template-rows: 1fr 1fr 1fr;
+
   justify-content: center;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 .card-body {
   font-size: 18px;
