--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -45,7 +45,7 @@
     <h2 class="ivi">Услуги</h2>
   </div>
   <div class="section-common__content container ">
-    <div class="row container-yslugi ">
+    <div class="col-12 ">
       
       {% for service in services %}
       {% if service.show %}
