--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -542,6 +542,9 @@ ul li i:after {
 }
 .section-common__content {
   background-color: tomato;
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  justify-content: center;
 }
 .section-common__tit {
   color: #000;
