--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -49,7 +49,7 @@
       
       {% for service in services %}
       {% if service.show %}
-      <div class="col-md-4 ">
+      <div class="col-md-4 cards ">
         <div class="card  mb-4 shadow-sm text-center " >
           {% if service.image %}
           <img class="img-thumbnail gap  " src="{{ url_for('static', filename=service.image) }}" alt="">
