--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -692,7 +692,7 @@ ul li i:after {
 }
 @media (max-width: 770px) {
   .soc {
-    justify-content: center;
+    margin-left: 45px;
   }
 }
 /*end @media*/
